--- a/workspaces/workspace_2.yaml
+++ b/workspaces/workspace_2.yaml
@@ -2,6 +2,7 @@ apiVersion: krateo.io/v1alpha1
 kind: Workspace
 metadata:
   name: workspace-2
+  namespace: organization-2
 spec:
   name: workspace-2
   description: "Workspace 2"
