--- a/deploy/service.yaml
+++ b/deploy/service.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: permission-lab-svc
+  namespace: organization-1
   labels:
     component: permission-lab
 spec:
