--- a/rolebindings/role-read.yaml
+++ b/rolebindings/role-read.yaml
@@ -1,8 +1,9 @@
 apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRole
+kind: Role
 metadata:
   name: workspaces-reader
+  namespace: organization-1
 rules:
   - apiGroups: ["krateo.io"]
-    resources: ["workspaces/"]
+    resources: ["workspaces/organization-1"]
     verbs: ["get", "list", "watch"]
