--- a/rolebindings/role-read.yaml
+++ b/rolebindings/role-read.yaml
@@ -5,5 +5,6 @@ metadata:
   namespace: organization-1
 rules:
   - apiGroups: ["krateo.io"]
-    resources: ["workspaces/organization-1"]
+    resources: ["workspaces"]
+    resourceNames: ["workspace-1", "workspace-3", "workspace-4"]
     verbs: ["get", "list", "watch"]
