--- a/rolebindings/read.yaml
+++ b/rolebindings/read.yaml
@@ -10,3 +10,16 @@ roleRef:
   kind: Role
   name: workspaces-reader
   apiGroup: rbac.authorization.k8s.io
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
+metadata:
+  name: read-workspaces-list
+  namespace: organization-1
+subjects:
+  - kind: ServiceAccount
+    name: krateo-lab-user
+roleRef:
+  kind: Role
+  name: workspaces-reader-list
+  apiGroup: rbac.authorization.k8s.io
