--- a/rolebindings/role-read.yaml
+++ b/rolebindings/role-read.yaml
@@ -6,5 +6,15 @@ metadata:
 rules:
   - apiGroups: ["krateo.io"]
     resources: ["workspaces"]
-    resourceNames: ["workspace-1", "workspace-3", "workspace-4"]
+    resourceNames: ["workspace-1", "workspace-4"]
     verbs: ["get", "list", "watch"]
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: Role
+metadata:
+  name: workspaces-reader-list
+  namespace: organization-1
+rules:
+  - apiGroups: ["krateo.io"]
+    resources: ["workspaces"]
+    verbs: ["list"]
